--- a/app/src/main/res/layout/layout_network_tip.xml
+++ b/app/src/main/res/layout/layout_network_tip.xml
@@ -6,10 +6,14 @@
 
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="@dimen/dp_30"
+        android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:gravity="center"
-        android:text="网络连接不可用,请检查网络设置!"
+        android:paddingBottom="@dimen/dp_4"
+        android:paddingLeft="@dimen/dp_10"
+        android:paddingRight="@dimen/dp_10"
+        android:paddingTop="@dimen/dp_4"
+        android:text="@string/network_unavailable_tip"
         android:textColor="@color/Red" />
 
 </RelativeLayout>
