--- a/app/src/main/res/layout/layout_network_tip.xml
+++ b/app/src/main/res/layout/layout_network_tip.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/Grey200">
+    android:background="#99EEEEEE">
 
     <TextView
         android:layout_width="wrap_content"
