--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -14,6 +14,11 @@
             android:title="@string/nav_night_mode" />
 
         <item
+            android:id="@+id/nav_todo"
+            android:icon="@drawable/ic_todo_default_24dp"
+            android:title="@string/nav_todo" />
+
+        <item
             android:id="@+id/nav_setting"
             android:icon="@drawable/ic_setting_white_24dp"
             android:title="@string/nav_setting" />
