--- a/app/src/main/res/layout/item_todo_list.xml
+++ b/app/src/main/res/layout/item_todo_list.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content">
 
     <RelativeLayout
-        android:id="@+id/main"
+        android:id="@+id/item_todo_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="@dimen/dp_10"
