--- a/app/src/main/res/values-v19/styles.xml
+++ b/app/src/main/res/values-v19/styles.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    BaseObserverBase application theme. -->
+    <!-- Base application theme. -->
     <style name="AppTheme" parent="BaseAppTheme.NoActionBar">
         <item name="android:windowTranslucentStatus">true</item>
         <item name="android:fitsSystemWindows">false</item>
