--- a/app/src/main/res/layout/item_home_list.xml
+++ b/app/src/main/res/layout/item_home_list.xml
@@ -19,7 +19,7 @@
         android:paddingTop="@dimen/item_content_padding">
 
         <TextView
-            android:id="@+id/tv_article_fresh"
+            android:id="@+id/tv_article_top"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/dp_10"
@@ -28,10 +28,27 @@
             android:paddingLeft="@dimen/dp_4"
             android:paddingRight="@dimen/dp_4"
             android:paddingTop="@dimen/dp_2"
+            android:text="@string/top_tip"
             android:textColor="@color/Red"
             android:textSize="@dimen/dp_10"
             android:visibility="gone"
+            tools:visibility="visible" />
+
+        <TextView
+            android:id="@+id/tv_article_fresh"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/dp_10"
+            android:layout_toRightOf="@+id/tv_article_top"
+            android:background="@drawable/bg_fresh"
+            android:paddingBottom="@dimen/dp_2"
+            android:paddingLeft="@dimen/dp_4"
+            android:paddingRight="@dimen/dp_4"
+            android:paddingTop="@dimen/dp_2"
             android:text="@string/new_fresh"
+            android:textColor="@color/Red"
+            android:textSize="@dimen/dp_10"
+            android:visibility="gone"
             tools:visibility="visible" />
 
         <TextView
