--- a/app/src/main/res/layout/item_knowledge_list.xml
+++ b/app/src/main/res/layout/item_knowledge_list.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -22,7 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/dp_10"
-            android:text="@string/app_name"
+            tools:text="@string/app_name"
             android:textColor="@color/item_author"
             android:textSize="@dimen/item_tv_author" />
 
@@ -31,7 +32,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:text="@string/app_name"
+            tools:text="@string/app_name"
             android:textColor="@color/item_date"
             android:textSize="@dimen/item_tv_date" />
 
@@ -73,10 +74,9 @@
             android:layout_marginStart="@dimen/dp_10"
             android:layout_marginTop="@dimen/dp_10"
             android:layout_toRightOf="@+id/iv_article_thumbnail"
-            android:background="@drawable/bg_tag_one"
             android:gravity="center"
-            android:text="@string/app_name"
-            android:textColor="@color/item_tag_tv"
+            tools:text="@string/app_name"
+            android:textColor="@color/colorAccent"
             android:textSize="@dimen/item_tv_tag" />
 
         <LinearLayout
