--- a/app/src/main/res/layout/item_home_list.xml
+++ b/app/src/main/res/layout/item_home_list.xml
@@ -52,12 +52,29 @@
             tools:visibility="visible" />
 
         <TextView
+            android:id="@+id/tv_article_tag"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/dp_10"
+            android:layout_toRightOf="@+id/tv_article_fresh"
+            android:background="@drawable/bg_tag"
+            android:paddingLeft="@dimen/dp_4"
+            android:paddingTop="@dimen/dp_2"
+            android:paddingRight="@dimen/dp_4"
+            android:paddingBottom="@dimen/dp_2"
+            android:textColor="@color/colorAccent"
+            android:textSize="@dimen/dp_10"
+            android:visibility="gone"
+            tools:text="@string/app_name"
+            tools:visibility="visible" />
+
+        <TextView
             android:id="@+id/tv_article_author"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/tv_article_fresh"
+            android:layout_alignBaseline="@+id/tv_article_top"
             android:layout_marginLeft="@dimen/dp_10"
-            android:layout_toRightOf="@+id/tv_article_fresh"
+            android:layout_toRightOf="@+id/tv_article_tag"
             android:textColor="@color/item_author"
             android:textSize="@dimen/item_tv_author"
             tools:text="@string/app_name" />
