--- a/app/src/main/res/layout/item_knowledge_list.xml
+++ b/app/src/main/res/layout/item_knowledge_list.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:clickable="true"
+    android:focusable="true"
     android:foreground="?attr/selectableItemBackground"
     app:cardBackgroundColor="@color/viewBackground"
     app:cardCornerRadius="@dimen/dp_1"
@@ -14,27 +15,27 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="@dimen/item_content_padding"
+        android:paddingTop="@dimen/item_content_padding"
         android:paddingRight="@dimen/item_content_padding"
-        android:paddingTop="@dimen/item_content_padding">
+        android:paddingBottom="@dimen/item_content_padding">
 
         <TextView
             android:id="@+id/tv_article_author"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/dp_10"
-            tools:text="@string/app_name"
             android:textColor="@color/item_author"
-            android:textSize="@dimen/item_tv_author" />
+            android:textSize="@dimen/item_tv_author"
+            tools:text="@string/app_name" />
 
         <TextView
             android:id="@+id/tv_article_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            tools:text="@string/app_name"
             android:textColor="@color/item_date"
-            android:textSize="@dimen/item_tv_date" />
+            android:textSize="@dimen/item_tv_date"
+            tools:text="@string/app_name" />
 
         <ImageView
             android:id="@+id/iv_article_thumbnail"
@@ -43,8 +44,8 @@
             android:layout_below="@+id/tv_article_author"
             android:layout_marginLeft="@dimen/dp_10"
             android:layout_marginTop="@dimen/dp_8"
-            android:contentDescription="article thumbnail"
-            android:scaleType="centerCrop" />
+            android:scaleType="centerCrop"
+            android:src="@drawable/bg_placeholder" />
 
         <TextView
             android:id="@+id/tv_article_title"
@@ -66,31 +67,30 @@
             android:id="@+id/tv_article_chapterName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
             android:layout_below="@+id/tv_article_title"
-            android:layout_marginEnd="@dimen/dp_10"
-            android:layout_marginLeft="@dimen/dp_10"
-            android:layout_marginRight="@dimen/dp_10"
+            android:layout_alignParentBottom="true"
             android:layout_marginStart="@dimen/dp_10"
+            android:layout_marginLeft="@dimen/dp_10"
             android:layout_marginTop="@dimen/dp_10"
+            android:layout_marginEnd="@dimen/dp_10"
+            android:layout_marginRight="@dimen/dp_10"
             android:layout_toRightOf="@+id/iv_article_thumbnail"
             android:gravity="center"
-            tools:text="@string/app_name"
-            android:textColor="@color/colorAccent"
-            android:textSize="@dimen/item_tv_tag" />
+            android:textColor="@color/item_chapter"
+            android:textSize="@dimen/item_tv_tag"
+            tools:text="@string/app_name" />
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"
             android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/iv_like"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:contentDescription="like article"
                 app:srcCompat="@drawable/ic_like_not" />
 
         </LinearLayout>
