--- a/app/src/main/res/menu/bottom_navigation_main.xml
+++ b/app/src/main/res/menu/bottom_navigation_main.xml
@@ -1,29 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-      xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/action_home"
         android:enabled="true"
         android:icon="@drawable/ic_home_black_24dp"
         android:title="@string/home"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="ifRoom" />
     <item
         android:id="@+id/action_knowledge_system"
         android:enabled="true"
         android:icon="@drawable/ic_apps_black_24dp"
         android:title="@string/knowledge_system"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/action_wechat"
+        android:enabled="true"
+        android:icon="@drawable/ic_wechat_black_24dp"
+        android:title="@string/wechat"
+        app:showAsAction="ifRoom" />
     <item
         android:id="@+id/action_navigation"
         android:enabled="true"
         android:icon="@drawable/ic_navigation_black_24dp"
         android:title="@string/navigation"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="ifRoom" />
     <item
         android:id="@+id/action_project"
         android:enabled="true"
         android:icon="@drawable/ic_project_black_24dp"
         android:title="@string/project"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="ifRoom" />
 
 </menu>
