--- a/app/src/main/res/layout/item_project_list.xml
+++ b/app/src/main/res/layout/item_project_list.xml
@@ -22,7 +22,7 @@
             android:layout_height="match_parent"
             android:layout_weight="2"
             android:contentDescription="@null"
-            android:src="@mipmap/ic_launcher" />
+            app:srcCompat="@mipmap/ic_launcher" />
 
         <RelativeLayout
             android:layout_width="0dp"
