--- a/app/src/main/res/layout/activity_content.xml
+++ b/app/src/main/res/layout/activity_content.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/cl_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/viewBackground"
@@ -7,6 +8,6 @@
 
     <include layout="@layout/toolbar" />
 
-    <include layout="@layout/container" />
+    <!--<include layout="@layout/container" />-->
 
-</LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
